examples/gateway/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: konggatewayapi
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: sample-gatewayclass
spec:
  controller: gatewayapi.kong.com/kong-operator
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: kong
  namespace: konggatewayapi
spec:
  gatewayClassName: sample-gatewayclass
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: kuard
